updated package.json and fixed a typo

--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andrey Kalashnik",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AndreyKalashnik/react-boilerplate.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/AndreyKalashnik/react-boilerplate/issues"
+  },
+  "homepage": "https://github.com/AndreyKalashnik/react-boilerplate#readme"
 }
