--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andrey Kalashnik",
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/AndreyKalashnik/react-boilerplate/issues"
   },
-  "homepage": "https://github.com/AndreyKalashnik/react-boilerplate#readme"
+  "homepage": "https://github.com/AndreyKalashnik/react-boilerplate#readme",
+  "devDependencies": {
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
+  }
 }
